--- a/package.xml
+++ b/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>motion_player</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="luca911014@gmail.com">root</maintainer>
-  <license>TODO: License declaration</license>
+  <version>1.0.0</version>
+  <description>ROS 2 package for playing back motion capture data on humanoid robots with BVH skeleton visualization</description>
+  <maintainer email="dy.jang@movin3d.com">YUN</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
