support realtime viewer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,12 @@ install(
 )
 
 install(
+  PROGRAMS scripts/motion_player2.py
+  DESTINATION lib/${PROJECT_NAME}
+  RENAME motion_player2
+)
+
+install(
   PROGRAMS scripts/bvh_reader.py
   DESTINATION lib/${PROJECT_NAME}
 )
